--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "apiai": "^4.0.3",
-    "express": "4.13.4",
-    "socket.io": "1.4.6"
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
   }
 }
